Fixed Contrast issues

--- a/project/styles/about-mobile.css
+++ b/project/styles/about-mobile.css
@@ -63,6 +63,10 @@
         display: none;
     }
 
+    header nav a {
+        color: var(--white);
+    }
+
     #ham-Btn.spin {
         transform: rotate(360deg);
     }
