--- a/project/styles/resources-mobile.css
+++ b/project/styles/resources-mobile.css
@@ -13,6 +13,7 @@
     --black-col: #000;
     --silver-color: #A9A9A9;
 
+
     /*Body*/
     --body-color: #F5F5F5;
 
@@ -61,6 +62,10 @@
 
     header nav {
         display: none;
+    }
+    
+    header nav a {
+        color: var(--white);
     }
 
     #ham-Btn {
