--- a/project/styles/tips-mobile.css
+++ b/project/styles/tips-mobile.css
@@ -12,7 +12,7 @@
     --darkgreen: rgb(3, 48, 3);
     --black-col: #000;
     --silver-color: #A9A9A9;
-    --red-color-time: red;
+    --red-color-time: rgb(162, 9, 9);
 
     /*Body*/
     --body-color: #F5F5F5;
@@ -67,6 +67,10 @@
         display: none;
     }
 
+    header nav a {
+        color: var(--white);
+    }
+
     #ham-Btn {
         height: 20%;
         width: 10%;
@@ -80,6 +84,7 @@
         color: var(--body-color);
         transition: transform 1s ease-in-out;
     }
+
     #ham-Btn.spin {
         transform: rotate(360deg);
     }
